--- a/pom.xml
+++ b/pom.xml
@@ -245,6 +245,15 @@
 
 	<build>
 		<defaultGoal>clean test</defaultGoal>
+		<!--
+		<extensions>
+			<extension>
+				<groupId>org.apache.maven.extensions</groupId>
+				<artifactId>maven-build-cache-extension</artifactId>
+				<version>1.2.0</version>
+			</extension>
+		</extensions>
+		-->
 		<pluginManagement>
 			<plugins>
 				<plugin>
