--- a/jmh/pom.xml
+++ b/jmh/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.github.skjolber.3d-bin-container-packing</groupId>
 		<artifactId>parent</artifactId>
-		<version>3.0.10</version>
+		<version>3.0.11-SNAPSHOT</version>
 	</parent>
 	<artifactId>jmh</artifactId>
 	<name>JMH</name>
