--- a/visualizer/algorithm/pom.xml
+++ b/visualizer/algorithm/pom.xml
@@ -8,6 +8,8 @@
 		<relativePath>../..</relativePath>
 	</parent>
 	<artifactId>visualizer-algorithm</artifactId>
+	<name>visualizer-algorithm</name>
+	<description>Algorithm visualization 3D bin packaging</description>
 
 	<properties>
 		<module-name>com.github.skjolber.packing.visualizer.algorithm</module-name>
@@ -90,6 +92,13 @@
 			<plugin>
 				<groupId>org.moditect</groupId>
 				<artifactId>moditect-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.sonatype.central</groupId>
+				<artifactId>central-publishing-maven-plugin</artifactId>
+				<configuration>
+					<skipPublishing>true</skipPublishing>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
