--- a/core/pom.xml
+++ b/core/pom.xml
@@ -7,6 +7,8 @@
 		<version>4.0.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>core</artifactId>
+	<name>core</name>
+	<description>Core implementations for 3D bin packaging</description>
 
 	<properties>
 		<module-name>com.github.skjolber.packing.core</module-name>
