--- a/test/pom.xml
+++ b/test/pom.xml
@@ -7,6 +7,8 @@
 		<version>4.0.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>test</artifactId>
+	<name>test</name>
+	<description>Unit testing and various generators for 3D bin packaging</description>
 
 	<properties>
 		<module-name>com.github.skjolber.packing.test</module-name>
