--- a/visualizer/packaging/pom.xml
+++ b/visualizer/packaging/pom.xml
@@ -8,6 +8,8 @@
 		<relativePath>../..</relativePath>
 	</parent>
 	<artifactId>visualizer-packaging</artifactId>
+	<name>visualizer-packaging</name>
+	<description>Packaging-result visualization for 3D bin packaging</description>
 
 	<properties>
 		<module-name>com.github.skjolber.packing.visualizer.packaging</module-name>
@@ -104,6 +106,13 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
 					<skipTests>true</skipTests>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.sonatype.central</groupId>
+				<artifactId>central-publishing-maven-plugin</artifactId>
+				<configuration>
+					<skipPublishing>true</skipPublishing>
 				</configuration>
 			</plugin>
 		</plugins>
