--- a/points/pom.xml
+++ b/points/pom.xml
@@ -7,8 +7,8 @@
 		<version>4.0.0-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
-	<artifactId>extreme-points</artifactId>
-	<name>extreme-points</name>
+	<artifactId>points</artifactId>
+	<name>points</name>
 	<description>Point calculations for 3D bin packaging</description>
 
 	<properties>
