--- a/visualizer/packaging/pom.xml
+++ b/visualizer/packaging/pom.xml
@@ -30,7 +30,7 @@
 		</dependency>		
 		<dependency>
 			<groupId>com.github.skjolber.3d-bin-container-packing</groupId>
-			<artifactId>extreme-points</artifactId>
+			<artifactId>points</artifactId>
 		</dependency>		
 		<dependency>
 			<groupId>com.github.skjolber.3d-bin-container-packing</groupId>
