--- a/test/pom.xml
+++ b/test/pom.xml
@@ -5,6 +5,7 @@
 		<groupId>com.github.skjolber.3d-bin-container-packing</groupId>
 		<artifactId>parent</artifactId>
 		<version>4.0.0-SNAPSHOT</version>
+		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>test</artifactId>
 	<name>test</name>
