--- a/visualizer/api/pom.xml
+++ b/visualizer/api/pom.xml
@@ -5,7 +5,7 @@
 		<groupId>com.github.skjolber.3d-bin-container-packing</groupId>
 		<artifactId>parent</artifactId>
 		<version>4.0.0-SNAPSHOT</version>
-		<relativePath>../..</relativePath>
+		<relativePath>../../pom.xml</relativePath>
 	</parent>
 	<artifactId>visualizer-api</artifactId>
 	<name>visualizer-api</name>
