--- a/pom.xml
+++ b/pom.xml
@@ -11,39 +11,39 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<java.version>1.8</java.version>
+		<java.version>17</java.version>
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 		<maven.compiler.target>${java.version}</maven.compiler.target>
 
 		<commons-math3.version>3.6.1</commons-math3.version>
 		<mockito.version>5.20.0</mockito.version>
 
-		<eclipse-collections.version>11.1.0</eclipse-collections.version>
-		<google-truth.version>1.4.4</google-truth.version>
+		<eclipse-collections.version>13.0.0</eclipse-collections.version>
+		<google-truth.version>1.4.5</google-truth.version>
 		<junit-quicktest.version>1.0</junit-quicktest.version>
-		<junit.version>5.11.4</junit.version>
+		<junit.version>5.14.0</junit.version>
 		<jmh.version>1.37</jmh.version>
 		<commons-io.version>2.20.0</commons-io.version>
 
 		<!-- plugins -->
 		<build-helper-maven-plugin.version>1.9.1</build-helper-maven-plugin.version>
 		<jacoco-maven-plugin.version>0.8.12</jacoco-maven-plugin.version>
-		<sonatype-plugin.version>0.8.0</sonatype-plugin.version>
-		<maven-surefire-plugin.version>3.5.2</maven-surefire-plugin.version>
+		<sonatype-plugin.version>0.9.0</sonatype-plugin.version>
+		<maven-surefire-plugin.version>3.5.4</maven-surefire-plugin.version>
 		<maven-source-plugin.version>3.3.1</maven-source-plugin.version>
-		<maven-javadoc-plugin.version>3.11.2</maven-javadoc-plugin.version>
-		<maven-release-plugin.version>2.5.3</maven-release-plugin.version>
-		<maven-gpg-plugin.version>3.2.7</maven-gpg-plugin.version>
-		<maven-dependency-plugin.version>2.10</maven-dependency-plugin.version>
-		<jacoco-maven-plugin.version>0.8.12</jacoco-maven-plugin.version>
+		<maven-javadoc-plugin.version>3.12.0</maven-javadoc-plugin.version>
+		<maven-release-plugin.version>3.1.1</maven-release-plugin.version>
+		<maven-gpg-plugin.version>3.2.8</maven-gpg-plugin.version>
+		<maven-dependency-plugin.version>3.9.0</maven-dependency-plugin.version>
+		<jacoco-maven-plugin.version>0.8.13</jacoco-maven-plugin.version>
 		<maven-compiler-plugin.version>3.14.1</maven-compiler-plugin.version>
-		<maven-shade-plugin.version>3.6.0</maven-shade-plugin.version>
-		<jqwik.version>1.9.1</jqwik.version>
-		<assertj.version>3.27.3</assertj.version>
+		<maven-shade-plugin.version>3.6.1</maven-shade-plugin.version>
+		<jqwik.version>1.9.3</jqwik.version>
+		<assertj.version>3.27.6</assertj.version>
 		<owasp-dependency-check.version>5.3.2</owasp-dependency-check.version>
-		<pitest.version>1.20.3</pitest.version>
-		<jackson.version>2.18.2</jackson.version>
-		<spotless.version>2.44.2</spotless.version>
+		<pitest.version>1.21.0</pitest.version>
+		<jackson.version>2.20.0</jackson.version>
+		<spotless.version>2.46.1</spotless.version>
 	</properties>
 
 	<licenses>
@@ -274,6 +274,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-dependency-plugin</artifactId>
+					<version>${maven-dependency-plugin.version}</version>
 				</plugin>
 				<plugin>
 					<groupId>org.jacoco</groupId>
@@ -396,9 +397,9 @@
 					</executions>
 				</plugin>
 				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-enforcer-plugin</artifactId>
-					<version>3.5.0</version>
+			        <groupId>org.apache.maven.plugins</groupId>
+			        <artifactId>maven-enforcer-plugin</artifactId>
+			        <version>3.6.2</version>
 					<executions>
 						<execution>
 							<id>enforce-versions</id>
@@ -417,10 +418,10 @@
 											(http://maven.apache.org/plugins/maven-invoker-plugin/)!</message>
 									</bannedPlugins>
 									<requireMavenVersion>
-										<version>3.5.2</version>
+										<version>3.6.3</version>
 									</requireMavenVersion>
 									<requireJavaVersion>
-										<version>1.8</version>
+										<version>17</version>
 									</requireJavaVersion>
 								</rules>
 							</configuration>
@@ -430,7 +431,7 @@
 				<plugin>
 					<groupId>org.moditect</groupId>
 					<artifactId>moditect-maven-plugin</artifactId>
-					<version>1.2.2.Final</version>
+					<version>1.3.0.Final</version>
 					<executions>
 						<execution>
 							<id>add-module-infos</id>
@@ -447,11 +448,6 @@
 							</configuration>
 						</execution>
 					</executions>
-				</plugin>
-				<plugin>
-					<groupId>org.sonarsource.scanner.maven</groupId>
-					<artifactId>sonar-maven-plugin</artifactId>
-					<version>3.11.0.3922</version>
 				</plugin>
 				<plugin>
 					<groupId>org.pitest</groupId>
@@ -473,10 +469,6 @@
 			</plugins>
 		</pluginManagement>
 		<plugins>
-			<plugin>
-				<groupId>org.sonarsource.scanner.maven</groupId>
-				<artifactId>sonar-maven-plugin</artifactId>
-			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -516,6 +508,10 @@
 			<plugin>
 				<groupId>org.sonatype.central</groupId>
 				<artifactId>central-publishing-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+		        <groupId>org.apache.maven.plugins</groupId>
+		        <artifactId>maven-enforcer-plugin</artifactId>
 			</plugin>
 		</plugins>
 	</build>
