--- a/open-api/open-api-client/pom.xml
+++ b/open-api/open-api-client/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>com.github.skjolber.3d-bin-container-packing</groupId>
 		<artifactId>open-api-parent</artifactId>
-		<version>4.0.2</version>
+		<version>4.0.3-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>open-api-client</artifactId>
