Adjust modules / build

--- a/open-api/pom.xml
+++ b/open-api/pom.xml
@@ -72,7 +72,16 @@
 				</plugin>			
 			</plugins>
     	</pluginManagement>
-    </build>
+		<plugins>
+			<plugin>
+				<groupId>org.sonatype.central</groupId>
+				<artifactId>central-publishing-maven-plugin</artifactId>
+				<configuration>
+					<skipPublishing>true</skipPublishing>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>    
     
 	<modules>
 		<module>open-api-model</module>
