[maven-release-plugin] prepare release parent-4.0.4

--- a/open-api/open-api-test/pom.xml
+++ b/open-api/open-api-test/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>com.github.skjolber.3d-bin-container-packing</groupId>
 		<artifactId>open-api-parent</artifactId>
-		<version>4.0.4-SNAPSHOT</version>
+		<version>4.0.4</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>	
 	<artifactId>open-api-test</artifactId>
