--- a/test/pom.xml
+++ b/test/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.github.skjolber.3d-bin-container-packing</groupId>
 		<artifactId>parent</artifactId>
-		<version>4.0.6-SNAPSHOT</version>
+		<version>4.0.6</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>test</artifactId>
