--- a/open-api/open-api-model/pom.xml
+++ b/open-api/open-api-model/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>com.github.skjolber.3d-bin-container-packing</groupId>
 		<artifactId>open-api-parent</artifactId>
-		<version>4.0.9-SNAPSHOT</version>
+		<version>4.0.9</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>open-api-model</artifactId>
@@ -113,4 +113,8 @@
 			</plugin>				
 		</plugins>
 	</build>
+
+  <scm>
+    <tag>parent-4.0.9</tag>
+  </scm>
 </project>
