--- a/visualizer/api/pom.xml
+++ b/visualizer/api/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.github.skjolber.3d-bin-container-packing</groupId>
 		<artifactId>parent</artifactId>
-		<version>4.0.9-SNAPSHOT</version>
+		<version>4.0.9</version>
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
 	<artifactId>visualizer-api</artifactId>
