--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java: [ 21, 25]
+        java: [ 25]
     name: Java ${{ matrix.java }} build
     steps:
     - uses: actions/checkout@v5
