--- a/api/pom.xml
+++ b/api/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.github.skjolber.3d-bin-container-packing</groupId>
 		<artifactId>parent</artifactId>
-		<version>4.0.10-SNAPSHOT</version>
+		<version>4.1.0</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>api</artifactId>
